<resources>
    <string name="app_name">MDviewer</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="menu_open_file">Open File</string>
    <string name="menu_recent_files">Recent Files</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_theme_system">System Theme</string>
    <string name="menu_theme_light">Light Theme</string>
    <string name="menu_theme_dark">Dark Theme</string>
    <string name="no_recent_files">No recent files</string>
</resources>